samples/_failures_safe/1761257404_be595b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a68c7539.c: In function ‘main’:
./samples/SAFE/__tmp_a68c7539.c:172:5: error: ‘print_t’ undeclared (first use in this function); did you mean ‘printf’?
  172 |     print_t
      |     ^~~~~~~
      |     printf
./samples/SAFE/__tmp_a68c7539.c:172:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a68c7539.c:172:12: error: expected ‘;’ at end of input
  172 |     print_t
      |            ^
      |            ;
./samples/SAFE/__tmp_a68c7539.c:172:5: error: expected declaration or statement at end of input
  172 |     print_t
      |     ^~~~~~~
